@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+description="Check filesystems according to /etc/fstab for errors and \
+optionally repair them."
+
 depend() {
 	need checkroot
 	after modules
