@@ -2,6 +2,8 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+description="Sets the hostname of the machine."
+
 depend() {
 	need checkroot
 }
